--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
       - "1212:1212"
     environment:
       - JAVA_TOOL_OPTIONS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:1212"
+      command: '/bin/bash -c "/usr/bin/env chmod +x /project/wait-for-it.sh && /project/wait-for-it.sh dbpostgres:5432 -t 25 && java -jar /app.jar"'
+    links:
+      - dbpostgres
+  dbpostgres:
+    image: postgres
+    volumes:
+      - /private/var/lib/postgresql:/var/lib/postgresql
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: pguser
+      POSTGRES_DB: pgdb
