--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		<artifactId>log4j-api-kotlin</artifactId>
 		<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
