--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<kotlin.version>1.3.50</kotlin.version>
+		<mysql.connector.version>8.0.16</mysql.connector.version>
+		<log4j-api-kotlin.version>1.0.0</log4j-api-kotlin.version>
+		<opencsv.version>4.3.2</opencsv.version>
 	</properties>
 
 	<dependencies>
@@ -27,6 +30,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
@@ -43,14 +50,19 @@
 		<dependency>
 		<groupId>org.apache.logging.log4j</groupId>
 		<artifactId>log4j-api-kotlin</artifactId>
-		<version>1.0.0</version>
+		<version>${log4j-api-kotlin.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>4.3.2</version>
+			<version>${opencsv.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
