--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql:3306/activityMonitor
+spring.datasource.url=jdbc:mysql://localhost:13306/activitymonitor?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
