--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:13306/activitymonitor?useLegacyDate
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
