refarctored a bit added unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:13306/activitymonitor?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://activitymonitordb:3306/activitymonitor?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
