--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mysql.connector.version>8.0.16</mysql.connector.version>
         <log4j-api-kotlin.version>1.0.0</log4j-api-kotlin.version>
         <opencsv.version>4.3.2</opencsv.version>
+        <mockito-kotlin.version>2.2.0</mockito-kotlin.version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.nhaarman.mockitokotlin2</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>${mockito-kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
